z-index fix

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,6 +21,7 @@
   }
 
   &.affix{
+    z-index: 10;
     top: 0;
     left: 0;
     right: 0;
